# faster-whisper-rocm

./: .env.example  .gitignore  README.md  VERSIONS.md  project-overview.md  pyproject.toml
docker_rocm/: Dockerfile.rocm  docker-compose.yaml  export_ct2_artifacts.sh
docs/: ctranslate2-rocm-gfx1030.md  python-coding-standards.md
faster_whisper_rocm/: __about__.py  __init__.py
faster_whisper_rocm/cli/: __init__.py  app.py  parsing.py  prepare_ctranslate2_rocm.py
faster_whisper_rocm/cli/commands/: __init__.py  install_ctranslate2.py  model_info.py  transcribe.py
faster_whisper_rocm/io/: __init__.py  subtitle_formatter.py  timestamps.py
faster_whisper_rocm/models/: __init__.py  whisper.py
faster_whisper_rocm/utils/: __init__.py  constant.py  env_loader.py  helpers.py
scripts/: clean_codebase.sh  hf_models.py
tests/: __init__.py  test_additional_cli_branches.py  test_asr_cli.py  test_cli.py  test_commands.py  test_env_config.py  test_even_more_cli_coverage.py  test_helpers.py  test_models_whisper.py  test_module1.py  test_module2.py  test_more_branches_transcribe.py  test_more_cli_coverage.py  test_parsing.py  test_timestamps.py  test_utils.py
