[project]
name = "faster-whisper-rocm"
version = "0.2.0"
description = "A ROCm based faster-whisper implemenation for AMD GPU support"
readme = "README.md"
authors = [
  { name = "elvee", email = "lowie@beecave.nl" },
]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cli", "typer", "faster-whisper", "amd", "gpu", "rocm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13,<14",
  "faster-whisper>=1.0,<2.0",
  "python-dotenv>=1.1.1",
]

# Keep package at repo root under `faster_whisper_rocm/`
[project.urls]
Repository = "https://github.com/beecave-homelab/faster-whisper-rocm.git"

[tool.setuptools]
packages = ["faster_whisper_rocm"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "auditwheel>=6.4.2",
]
ctranslate2-rocm = [
    "ctranslate2 @ file:///${PROJECT_ROOT}/out/ctranslate2-3.23.0-cp310-cp310-linux_x86_64.whl",
]

[project.scripts]
faster-whisper-rocm = "faster_whisper_rocm.cli.app:app"

# ------------------------------
# Ruff (linter + formatter + import sorting)
# ------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"          # adjust if you target 3.9/3.12
preview = true                    # needed for DOC + FA rules
src = ["faster_whisper_rocm"]     # first-party package path

[tool.ruff.lint]
select = [
  "F",      # Pyflakes (includes F403/F405 for wildcard imports)
  "E", "W", # pycodestyle subset (PEP 8 basics)
  "N",      # pep8-naming (snake_case, PascalCase)
  "I",      # isort (import sorting)
  "D",      # pydocstyle (docstring presence + Google style)
  "DOC",    # pydoclint (Args/Returns/Raises checks; needs preview)
  "ANN",    # flake8-annotations (type hints everywhere)
  "TID",    # flake8-tidy-imports (absolute imports: TID252)
  "UP",     # pyupgrade (modern syntax)
  "FA",     # future-annotations (auto `from __future__`; needs preview)
]

# Optional: stricter typing rules (discourage bare Any)
extend-select = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["faster_whisper_rocm"]

# ------------------------------
# Pytest & Coverage
# ------------------------------
[tool.pytest.ini_options]
addopts = "-q --cov=faster_whisper_rocm --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["faster_whisper_rocm/cli/prepare_ctranslate2_rocm.py"]

# ------------------------------
# PDM scripts
# ------------------------------
[tool.pdm.scripts]
# Copy ROCm shared library into installed ctranslate2 package and patch RPATH
prepare_ctranslate2_rocm = { cmd = "python -m faster_whisper_rocm.cli.prepare_ctranslate2_rocm", help = "Vendor libctranslate2.so.3 into site-packages and set RPATH on ctranslate2 extensions" }
